test/expressions/bitshift/checks/bitshiftByNegative.1.good
bitshiftByNegative.chpl:9: error: halt reached - Cannot bitshift 128 by -8 because -8 is less than 0
